Bug 93119 - [BAT IGT HSW BDW SKL] has_infoframe pipe config mismatch
Summary: [BAT IGT HSW BDW SKL] has_infoframe pipe config mismatch
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Kimmo Nikkanen
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 93115 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-26 13:27 UTC by Daniel Vetter
Modified: 2016-10-11 11:14 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Daniel Vetter 2015-11-26 13:27:09 UTC
There's a lot of BAT CI noise that complains about has_infoframes mismatches like this:

[  108.012862] [drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in has_infoframe (expected 1, found 0)
[  108.012866] ------------[ cut here ]------------
[  108.012880] WARNING: CPU: 2 PID: 5925 at drivers/gpu/drm/i915/intel_display.c:12873 intel_atomic_commit+0x120c/0x1810 [i915]()
[  108.012881] pipe state doesn't match!

I suspect it's all the same bug on all machines, since the high-level infoframe logic is shared, and only hsw/bdw seem to be affected.
Comment 1 Daniel Vetter 2015-11-26 13:27:37 UTC
Assigning to Kimmo until we have a proper victim.
Comment 2 Daniel Vetter 2015-12-01 09:16:09 UTC
Anyone working on this? I tried to repro on my hsw with HDMI, but whatever the reasons I can't hit it :( Code inspection also didn't sched a cluea :(

Assigning to Kimmo to find a victim since the CI machines are all in Helsinki.
Comment 3 dvlohp 2015-12-06 13:18:48 UTC
Skylake seems to be affected, too. At least I see the same dmesg output after boot on my i5-6500,

P.S.: Is https://bugs.freedesktop.org/show_bug.cgi?id=93115 a duplicate of this bug?
Comment 4 Maarten Lankhorst 2015-12-14 15:05:08 UTC
My skylake's very much affected. Unsure what causes this. Is this a regression?
Comment 5 Ville Syrjala 2015-12-14 15:24:37 UTC
BTW I started to hatch something to decouple infoframes from hdmi. I'm not too optimistic that it would fix this because I would expect to see has_hdmi_sink mismatch too if we truly fail somehow in readout or enabling. Anyway the patches are here in case someone wants to try:
git://github.com/vsyrjala/linux.git infoframe_dig_port

One theory I have is that we program the infoframes perhaps too soon (before enabling some clock etc.), and they don't actually stick. Which is possibly something someone could look into.
Comment 6 Maarten Lankhorst 2015-12-16 09:00:22 UTC
[   11.543659] [drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in has_infoframe (expected 1, found 0)

It would have been nice if your branch had fixed it though...
Comment 7 Maarten Lankhorst 2015-12-16 09:37:06 UTC
Moving the call for set_infoframes() from intel_ddi_pre_enable to intel_enable_ddi doesn't work either. So I don't think it's an ordering problem.
Comment 8 Maarten Lankhorst 2015-12-16 09:43:47 UTC
On the initial hw readout there's no infoframe either, so could it be that there really should be be no infoframe?
Comment 9 Maarten Lankhorst 2015-12-16 09:44:58 UTC
*** Bug 93115 has been marked as a duplicate of this bug. ***
Comment 10 Ville Syrjala 2015-12-16 09:59:06 UTC
(In reply to Maarten Lankhorst from comment #8)
> On the initial hw readout there's no infoframe either, so could it be that
> there really should be be no infoframe?

Who knows what the BIOS does. You confirmed that set_infoframes really gets called? And that the HSW_TVIDEO_DIP_CTL value actually looks sane at the end of set_infoframes?
Comment 11 Ville Syrjala 2015-12-18 18:17:45 UTC
Fixed by

commit ffc85daba535d60d28f5c8ffb3ddf78e244e1948
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Wed Dec 16 18:10:00 2015 +0200

    drm/i915: Fix AVI/HDMI/SPD infoframes on HSW+
Comment 12 Jari Tahvanainen 2016-10-11 09:28:24 UTC
Verified on hsw that failure still exist on On Mar 4, 2016 (commit fab3e94) and was fixed (not reproducible) on May 13, 2016 (commit 1410b74).
Proposing this to be verified->closed as fixed with assumption that code works similar way on all hardware impacted.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.